objects/ssot__ActivityTopic__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityId__c</fullName>
        <label>Activity Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityObject__c</fullName>
        <label>Activity Object</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Activity Topic Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToId__c</fullName>
        <label>Related To</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705642061833_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityTopic_ActivityId_map_Activit_rel</label>
        <referenceTo>ssot__Activity__dlm</referenceTo>
        <relationshipLabel>ActivityTopic_ActivityId_map_Activit_rel</relationshipLabel>
        <relationshipName>rel_1705642061833_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705642063030_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityTopic_RelatedToId_map_Opport_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>ActivityTopic_RelatedToId_map_Opport_rel</relationshipLabel>
        <relationshipName>rel_1705642063030_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705642066789_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityTopic_RelatedToId_map_Accoun_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ActivityTopic_RelatedToId_map_Accoun_rel</relationshipLabel>
        <relationshipName>rel_1705642066789_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>